--- a/templates/app/dummy.html
+++ b/templates/app/dummy.html
@@ -12,7 +12,7 @@
 {% endblock %}
   </head>
   <center>
- <body>
+ <body style="background-color:powderblue;">
     <nav class="nav" style="background-color: rgb(230, 95, 95);">
         <a href="{% url 'admin:index' %}" class="nav-link">admin page</a>
         <a href="{% url 'jsoncreate' %}" class="nav-link">json create page</a>
